kubernetes-config/kinect-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kinect-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kinect-backend
  template:
    metadata:
      labels:
        app: kinect-backend
    spec:
      containers:
        - name: kinect-backend
          image: ayushi988/kinect:latest
          ports:
            - name: http
              containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: kinect-backend-service
spec:
  type: NodePort
  selector:
    app: kinect-backend
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 3000
      nodePort: 30001
