kubernetes-config/kinect-frontend.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: kinect-frontend-deployment
#   labels:
#     app: kinect-frontend
# spec:
#   selector:
#     matchLabels:
#       app: kinect-frontend
#   template:
#     metadata:
#       labels:
#         app: kinect-frontend
#     spec:
#       containers:
#         - name: kinect-frontend
#           image: ayushi988/kinect-frontend:latest
#           ports:
#             - containerPort: 2004
# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: kinect-frontend-service

# spec:
#   type: NodePort
#   selector:
#     app: kinect-frontend
#   ports:
#     - name: http
#       port: 2004
#       targetPort: 2004
#       nodePort: 30000

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kinect-frontend-deployment
  labels:
    app: kinect-frontend
spec:
  selector:
    matchLabels:
      app: kinect-frontend
  template:
    metadata:
      labels:
        app: kinect-frontend
    spec:
      containers:
        - name: kinect-frontend
          image: ayushi988/kinect-frontend:latest
          ports:
            - containerPort: 2004
---
apiVersion: v1
kind: Service
metadata:
  name: kinect-frontend-service
spec:
  type: NodePort
  selector:
    app: kinect-frontend
  ports:
    - name: http
      port: 2004
      targetPort: 2004
      nodePort: 30000
